2019-04-11 Frederik “Freso” S. Olesen <freso.dk@gmail.com>

	* 4.1-3 :
	Minor refactor of PKGBUILD, moving launch script building to build().

2019-04-11 Frederik “Freso” S. Olesen <freso.dk@gmail.com>

	* 4.1-2 :
	Now installs program icon as per freedesktop.org’s Icon Theme Specification.

2016-06-23 CubeTheThird <cubethethird@gmail.com>

	* 4.1-1 :
	New contributor.
	Updated PKGBUILD.
		Updated URLs for the new amidst git repository
		Generates the amidst shell script instead of bundling it.
		Modified java dependency for java 8 requirement.
	Bundled higher resolution icon.
	Version bump.
	See https://github.com/toolbox4minecraft/amidst/releases/tag/v4.1

	Upstream changelog:
	- added new Ocean Monument algorithm since 15w46a
	- changed the Slime Chunk color to be better visible in Mushroom Island biomes
	- fixed the Slime Chunk algorithm
	- fixed a NullPointerException

	Upstream 4.0 changelog:
	- New features displayed in the world
		- igloos
		- mineshafts
		- ocean monuments
		- 1.9 strongholds
		- the end dimension
		- the end cities
		- reduced false positives for villages
		- increased accuracy of structures
		- fixed nether fortress locations
		- fixed player locations for the nether
		- renamed the biome "Sky" to "The End"
		- the world spawn is now read from the save game
		- the player world icons now display the player's current dimension
	- Player loading, moving and saving
		- improved workflow for player moving
		- fixed the player in the sky issue by asking the user for the new y coordinate when a player is moved
		- fixed player moving context menu on linux (did not show up on right click)
		- added support for the playerdata directory, which is how players are stored since Minecraft 1.7.6 (saving and loading)
		- added implementation of another web-service to request player names and skins by uuid
		- added implementation of another web-service to request player uuids by name
		- reworked how save games are recognised as single- or multiplayer